crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_indented_code_tabs_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..7
  LIST@0..7
    LIST_ITEM@0..7
      LIST_MARKER@0..1 "-"
      CODE_BLOCK@1..7
        CODE_CONTENT@1..7
          WHITESPACE@1..3 "\t\t"
          TEXT@3..6 "foo"
          NEWLINE@6..7 "\n"
