crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_marker_indent_4_below_content_col.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..30
  LIST@0..30
    LIST_ITEM@0..4
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..4
        TEXT@2..3 "a"
        NEWLINE@3..4 "\n"
    LIST_ITEM@4..9
      WHITESPACE@4..5 " "
      LIST_MARKER@5..6 "-"
      WHITESPACE@6..7 " "
      PLAIN@7..9
        TEXT@7..8 "b"
        NEWLINE@8..9 "\n"
    LIST_ITEM@9..15
      WHITESPACE@9..11 "  "
      LIST_MARKER@11..12 "-"
      WHITESPACE@12..13 " "
      PLAIN@13..15
        TEXT@13..14 "c"
        NEWLINE@14..15 "\n"
    LIST_ITEM@15..30
      WHITESPACE@15..18 "   "
      LIST_MARKER@18..19 "-"
      WHITESPACE@19..20 " "
      PLAIN@20..30
        TEXT@20..21 "d"
        NEWLINE@21..22 "\n"
        TEXT@22..29 "    - e"
        NEWLINE@29..30 "\n"
